[package]
name = "champions-costume-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image", "file"] }
image = { version = "0.24.7", features = ["jpeg"] }
rfd = "0.12.0"
